# WooODM

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
examples/: product.py
src/wooODM/: __init__.py  core.py
src/wooODM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/wooODM/customers/: customer.py
src/wooODM/orders/: notes.py  order.py  refunds.py
src/wooODM/product/: attributes.py  category.py  image.py  product.py  reviews.py  shippping-class.py  tag.py  variations.py
src/wooODM/products/: attributes.py  category.py  product.py  reviews.py  shippping-class.py  tag.py  variations.py
