[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wooODM"
version="0.1"
authors = [
  {name = "Tsvetomir Hristov", email = "caci802@gmail.com"}
]
description = "A WooCommerce ODM wrapper for Python"
readme = "README.md"
dependencies = [
  "WooCommerce",
  "pydantic",
]
